# rev3

./: .gitignore  CMakeLists.txt
LICENSES/: LICENSE.txt
config/: interesting_imports.json
demo/: compile.bat  compile64.bat  simple_password.cpp  winapi_password.cpp  winapi_xor.cpp
src/: main.cpp
src/cli/: cli.cpp  cli.hpp
src/common/: pre_checks.cpp  pre_checks.hpp
src/config/: config.cpp  config.hpp
src/core/: bin.hpp  core.cpp  core.hpp  output.cpp  output.hpp  target.cpp  target.hpp
src/core/dynamic/solver/: solver.cpp  solver.hpp
src/core/dynamic/strings/: strings.cpp  strings.hpp
src/core/static/calls/: calls.cpp  calls.hpp
src/core/static/control/: control.cpp  control.hpp
src/core/static/disas/: disassembler.cpp  disassembler.hpp
src/core/static/parser/: lief_bin.cpp  lief_bin.hpp  parser.cpp  parser.hpp
src/core/static/patterns/: patterns.cpp  patterns.hpp  signatures.cpp  signatures.hpp
src/core/static/strings/: strings.cpp  strings.hpp
src/ui/: node_view.hpp  ui.cpp  ui.hpp
src/utils/: alias.hpp  errors.hpp  logger.hpp  system.cpp  system.hpp  utils.cpp  utils.hpp
tests/: bin_mock.hpp
tests/static/control/: test_control.cpp
tests/static/disassembly/: test_disassembler.cpp
